trunk/Archive2/40/ceb4204bd5d5c8/output
main.cpp: In function 'int main()':
main.cpp:8:10: error: invalid initialization of reference of type 'const volatile int&' from expression of type 'int'
     fnc(0);
          ^
main.cpp:4:6: note: in passing argument 1 of 'void fnc(const volatile int&)'
 void fnc(int const volatile&){cout<<1;}
      ^
